--- a/src/components/recipe.style.css
+++ b/src/components/recipe.style.css
@@ -5,14 +5,22 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background: white;
+    background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
     align-items: center;
     min-width: 40%;
 }
+.title {
+    color: red;
+}
 
 .images {
-    border-radius: 20%;
+    border-radius: 12%;
     width: 250px;
     height: 250px;
     margin-bottom: 20px;
+}
+
+.calories {
+    color: red;
+    font-weight: bold;
 }
