--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
 }
 
 .search-bar {
@@ -28,4 +29,12 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgb(71, 71, 71);
+  color: darkred;
 }
